feat: quantize colors (with wasm)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prepare": "snowpack",
     "start": "serve app",
-    "build": "snowpack --optimize && workbox generateSW workbox-config.js"
+    "build": "snowpack --optimize && workbox generateSW workbox-config.js",
+    "wasm": "wasm-pack build --target web --out-dir ../app/wasm image-quant/"
   },
   "snowpack": {
     "webDependencies": [
