refactor everything i guess
use class to manage state, use web worker for color quantization, expose max-color and dithering settings, use custom element to sync setting range with number input, fix bugs with mobile

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prepare": "snowpack",
     "start": "serve app",
     "build": "snowpack --optimize && workbox generateSW workbox-config.js",
-    "wasm": "wasm-pack build --target web --out-dir ../app/wasm image-quant/"
+    "build:wasm": "wasm-pack build --target web --out-dir ../app/wasm image-quant/"
   },
   "snowpack": {
     "webDependencies": [
