--- a/app/wasm/package.json
+++ b/app/wasm/package.json
@@ -6,7 +6,6 @@
     "image_quant.js",
     "image_quant.d.ts"
   ],
-  "module": "image_quant.js",
-  "types": "image_quant.d.ts",
-  "sideEffects": false
+  "browser": "image_quant.js",
+  "types": "image_quant.d.ts"
 }
